stocks tracker work in progress

--- a/2013-10-10-Stock-Market/index.html
+++ b/2013-10-10-Stock-Market/index.html
@@ -43,14 +43,17 @@
     <div class='small-2 columns'>
       <input id='quantity' placeholder='input quantity' type='text'>
     </div>
-    <div class='small-4 columns'>
+    <div class='small-2 columns'>
       <input class='button radius small success' id='buy' type='button' value='Buy Stocks'>
+    </div>
+    <div class='small-2 columns'>
+      <span>Update Frequency:</span>
     </div>
     <div class='small-2 columns'>
       <input id='interval' type='text'>
     </div>
     <div class='small-2 columns'>
-      <input class='button radius small success' id='etInterval' type='button' value='Update Frequency'>
+      <input class='button radius small success' id='setInterval' type='button' value='Track Live Prices'>
     </div>
   </div>
   <div class='row'>
