address book project working version with mailto and remove glitches

--- a/2013-10-13-Address-Book/index.html
+++ b/2013-10-13-Address-Book/index.html
@@ -36,6 +36,13 @@
       <input class='button small radius success' id='add' type='button' value='Add Person!'>
     </div>
   </div>
+  <div class='row'>
+    <div class='small-12 columns'>
+      <div id='people'>
+        <div class='clear'></div>
+      </div>
+    </div>
+  </div>
   <script src='js/vendor/jquery-1.10.2.js'></script>
   <script src='js/vendor/foundation.min.js'></script>
   <script src='js/vendor/underscore.js'></script>
